...
                                <constraints>
                                    <constraint firstAttribute="height" constant="100" id="zOy-Sr-9bq"/>
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EJZ-kV-uYF">
                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="startButton"/>
                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="27"/>
                                <state key="normal" title="Start">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="startGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BfE-Hc-oT0"/>
...
